# FairModelJAX

./: .gitignore  CHANGELOG.md  IS_DATA_SOURCES.md  LICENSE  README.md  build_is_dat_from_fred.py  conftest.py  pyproject.toml  run.py
.github/workflows/: ci.yml
raw_source/: SOURCES.md
raw_source/01_fortran_source/: FP.FOR
raw_source/03_us_model/: fmage.txt  fmdata.txt  fmexog.txt  fminput.txt  fmout.txt
raw_source/04_mc_model/mcj_extracted/: MC.INP  MCEXGSHR.INP  MCEXGSTR.INP  MCSHR1.INP  MCSHR2.INP  MCXX10.INP  PRINT.VAR  SHR.INP
raw_source/06_examples/: IS.INP  IS.OUT  IS.VAR  ISRE.INP  ISRE.OUT  SAR.INP  SAR.OUT
src/pyfair/: __init__.py  __main__.py  config.py
src/pyfair/core/: __init__.py  equations.py  estimate.py  readers.py  solver.py
src/pyfair/mc/: __init__.py  countries.py  model.py  plot.py  shr.py  solve.py
src/pyfair/pipeline/: __init__.py  is_pipeline.py  mc_pipeline.py  step01_load.py  step03_solve.py  step04_validate.py
src/pyfair/tools/: __init__.py  fpexe.py
src/pyfair/us/: __init__.py  cs.py  model.py  solve.py
tests/: test_mc_model.py  test_pipeline.py  test_solver.py  test_us_cs.py  test_us_identities.py  test_us_model.py  test_us_simulate.py
