[project]
name = "pyfair"
version = "0.1.0.dev0"
description = "JAX port of Ray C. Fair's US macroeconomic model"
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpy>=2.0",
    "polars>=1.0",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "linearmodels>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
pyfair = "pyfair.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfair"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# The package __init__ deliberately sets jax.config.update(...) before any
# JAX arrays are created, so the historic-name reexports below it are not
# at the top of the file. That is intentional — silence E402 here.
# F401 on those reexports is also intentional (they're part of the
# public back-compat surface).
"src/pyfair/__init__.py" = ["E402", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
